# simplestate

./: CODE_OF_CONDUCT.md  README.md  SECURITY.md  pyproject.toml
.devcontainer/: Dockerfile
.github/workflows/: codeql.yml  python-app.yml  python-build.yml  python-publish.yml
simplestate/: __init__.py  state.py  state_machine.py
tests/: test_state_machine.py
