[tool.poetry]
name = "simplestate"
version = "0.1.5"
description = "A simple stupid, declarative finite state machine for Python."
license = "Apache-2.0"
authors = ["panupong-puttarathamrongkul <54784627+panupong-puttarathamrongkul@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "simplestate" }]
repository = "https://github.com/panupong-develop/simplestate"
homepage = "https://pypi.org/project/simplestate"
keywords = ["finite state machine", "simplestate"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
